syntax = "proto3";
package bitsong.merkledrop.v1beta1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/v1beta1/coin.proto";
import "bitsong/merkledrop/v1beta1/merkledrop.proto";

option go_package = "github.com/bitsongofficial/go-bitsong/x/merkledrop/types";
option (gogoproto.goproto_getters_all) = false;

service Query {
  rpc Merkledrop(QueryMerkledropRequest) returns (QueryMerkledropResponse) {
    option (google.api.http).get = "/bitsong/merkledrop/v1beta1/markledrops/{id}";
  }

  rpc IndexClaimed(QueryIndexClaimedRequest) returns (QueryIndexClaimedResponse) {
    option (google.api.http).get = "/bitsong/merkledrop/v1beta1/markledrops/{id}/index_claimed/{index}";
  }
}

message QueryMerkledropRequest { uint64 id = 1; }

message QueryMerkledropResponse {
  bitsong.merkledrop.v1beta1.Merkledrop merkledrop = 1 [ (gogoproto.nullable) = false ];
}

message QueryIndexClaimedRequest {
  uint64 id = 1;
  uint64 index = 2;
}

message QueryIndexClaimedResponse {
  bool is_claimed = 1 [
    (gogoproto.moretags) = "yaml:\"is_claimed\""
  ];
}